# mycelium

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/db/: Cargo.toml
crates/db/src/: index.rs  lib.rs  query.rs  schema.rs  sync.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: CONTRIBUTING.md  LICENSE  icon.icns
src-tauri/icons/crates/db/src/: lib.rs  query.rs  schema.rs  sync.rs
src-tauri/icons/crates/org-parser/: Cargo.toml
src-tauri/icons/crates/org-parser/src/: cst.rs  headline.rs  lib.rs  list.rs  metadata.rs  property.rs
src-tauri/icons/src/: app.html
src-tauri/icons/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/src-tauri/capabilities/: default.json
src-tauri/icons/src-tauri/icons/: icon.icns
src-tauri/icons/src-tauri/src/: main.rs  state.rs
src-tauri/icons/src-tauri/src/commands/: editor.rs  graph.rs  mod.rs  node.rs  vault.rs
src-tauri/icons/src/lib/codemirror/extensions/: checkbox-toggle.ts  link-autocomplete.ts  live-preview.ts
src-tauri/icons/src/lib/codemirror/lang-org/: org-language.ts  org-parser.ts
src-tauri/icons/src/lib/components/common/: CreateNodeModal.svelte  MobileNav.svelte  NodeBreadcrumb.svelte  QuickSwitcher.svelte  Toast.svelte
src-tauri/icons/src/lib/components/graph/: GraphView.svelte  (+1 more)
src-tauri/icons/src/lib/stores/: editor.svelte.ts  orgconfig.svelte.ts
src-tauri/icons/src/lib/tauri/: commands.ts  events.ts  mock.ts
src-tauri/icons/src/routes/: +layout.svelte  +layout.ts  +page.svelte
src-tauri/icons/src/routes/vault/: +page.svelte
src-tauri/icons/tests/fixtures/sample-vault/: emacs.org  index.org
src-tauri/ios/: Info.plist.patch
src-tauri/ios-plugins/folder-picker/: Package.swift
src-tauri/ios-plugins/folder-picker/Sources/: FolderPickerPlugin.swift
src-tauri/ios/Sources/: FolderPicker.swift  FolderPickerBridge.swift
src-tauri/src/: lib.rs  watcher.rs
src-tauri/src/commands/: daily.rs  editor.rs  mod.rs  node.rs  picker.rs  tags.rs  vault.rs
(+89 files in other folders)
