[package]
name = "db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Org-roam v2 compatible SQLite database layer"

[dependencies]
org-parser = { path = "../org-parser" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
dirs = "6"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
